test/errors/overload_01.slip
; CannotOverload

(func main ():int
    (var foo:int 1)
    (var foo:int 2)
    (puti foo)
    0)
